[gd_scene load_steps=2 format=3 uid="uid://1d0qbo3qxnmm"]

[ext_resource type="Script" path="res://scripts/menu.gd" id="1_mosmd"]

[node name="Menu" type="CanvasLayer"]
script = ExtResource("1_mosmd")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -82.0
offset_top = -33.0
offset_right = 82.0
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2

[node name="NativeButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Native Functionality"

[node name="ButtonButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Button-Based"

[node name="MouseEventsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Mouse Events"

[connection signal="pressed" from="VBoxContainer/NativeButton" to="." method="_on_native_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonButton" to="." method="_on_button_button_pressed"]
[connection signal="pressed" from="VBoxContainer/MouseEventsButton" to="." method="_on_mouse_events_button_pressed"]
